--- a/src/ad.pug
+++ b/src/ad.pug
@@ -38,7 +38,7 @@ html(lang="ru", dir="ltr")
                         path(style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90")
             .container
                 .row
-                    .col-xl-6.offset-xl-1.align-items-center
+                    .col-xl-6.col-md-8.col-10.offset-md-2.offset-xl-1.align-items-center
                         h1.heading Качественная реклама для&nbsp;любого бизнеса
                         .offer.last Быстро. Точно. Эффективно. Новые возможности для&nbsp;вашего бизнеса с&nbsp;рекламой от&nbsp;SOHO.
         .content.p-relative.content_element
@@ -46,56 +46,57 @@ html(lang="ru", dir="ltr")
             img.element.element_2(src="../images/yandex-logo.png")            
             .container
                 .row
-                    .col-xl-10
+                    .col-xl-10.col-lg-8
                         h2.heading.margin-bottom Зачем нужна 
-                            span.text-green реклама в Яндекс и Google
+                            span.text-green реклама в&nbsp;Яндекс и&nbsp;Google
                     .col-xl-6.offset-xl-1
-                        ol.list.list_ol.row.justify-content-between.align-items-center.margin-bottom
-                            li.list__item.col-xl-5 Повышение узнаваемости бренда
-                            li.list__item.col-xl-5 Возвращение ушедших клиентов
-                            li.list__item.col-xl-5 Увеличение количества заявок
-                            li.list__item.col-xl-5 Повышение эффективности рекламы
+                        ol.list.list_ol.row.justify-content-between.align-items-center.margin-bottom.margin-bottom-xs-none
+                            li.list__item.col-lg-5 Повышение узнаваемости бренда
+                            li.list__item.col-lg-5 Возвращение ушедших клиентов
+                            li.list__item.col-lg-5 Увеличение количества заявок
+                            li.list__item.list__item_last.col-lg-5 Повышение эффективности рекламы
                     .col-xl-5.offset-xl-1
                         h3.heading.heading_small.margin-top Почему выбирают рекламу от SOHO?
                         p.offer Профессиональная настройка рекламы с использованием наиболее эффективных методов Яндекс и Google. Разработка преимуществ и уникальных торговых предложений (УТП), чтобы получить высокую рентабельность вложений. 
                     .col-xl-6.offset-xl-1
                         .row.margin-bottom
-                            .col-xl-5
+                            .col-sm-5
                                 .item.item_with-icon
                                     svg.item__icon(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
                                         g
                                             path.active-path(d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015    c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878    C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771    c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z" data-original="#000000" data-old_color="#FCFAFA" fill="#FCFBFB")
                                     .item__title БЫСТРО 
                                     .item__offer Настройка и запуск от 1 до 5 дней
-                            .col-xl-5
+                            .col-sm-5
                                 .item.item_with-icon
                                     svg.item__icon(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
                                         g
                                             path.active-path(d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015    c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878    C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771    c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z" data-original="#000000" data-old_color="#FCFAFA" fill="#FCFBFB")
                                     .item__title ТОЧНО 
                                     .item__offer Находим только целевую аудиторию
-                            .col-xl-5
+                            .col-sm-5
                                 .item.item_with-icon
                                     svg.item__icon(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
                                         g
                                             path.active-path(d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015    c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878    C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771    c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z" data-original="#000000" data-old_color="#FCFAFA" fill="#FCFBFB")
                                     .item__title Прозрачно 
                                     .item__offer Вы получите полный доступ к&nbsp;статистике
-                            .col-xl-5
-                                .item.item_with-icon
+                            .col-sm-5
+                                .item.item_last-md.item_with-icon
                                     svg.item__icon(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
                                         g
                                             path.active-path(d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015    c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878    C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771    c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z" data-original="#000000" data-old_color="#FCFAFA" fill="#FCFBFB")
                                     .item__title ЭФФЕКТИВНО 
                                     .item__offer Постоянный контроль и&nbsp;оптимизация&nbsp;рекламы               
                 .row.align-items-end
-                    .col-xl-4.offset-xl-2
+                    .col-xl-4.offset-xl-2.col-lg-6.offset-lg-3
                         p.heading.heading_small У вас 
                             span.text-green уже есть реклама, 
-                            | но вы недовольны результатами?
+                            | но&nbsp;вы недовольны результатами?
                         p.offer Клиентов, которые заказывают товар, очень мало? Конечная стоимость клиента слишком высока? Затраты на рекламу больше, чем доход от нее? Вам кажется, что бюждет просто “сливают”?
-                        a.btn.btn_primary(href="#") Анализ рекламной кампании
-                    .col-xl-4
+                        .margin-bottom-lg
+                            a.btn.btn_primary(href="#") Анализ рекламной кампании
+                    .col-xl-4.col-md-8.offset-md-2.col-lg-6.offset-lg-3.offset-xl-0
                         p.offer.offer_subtitle.text-uppercase.text-bold Выход есть — 
                             span.text-darkblue многофакторный анализ                  
                         p.offer.small Он проводится на всех уровнях: рынок, стратегия, потребность в товаре, размер ставок и корректировок
@@ -108,49 +109,50 @@ html(lang="ru", dir="ltr")
                     .col-xl-10
                         h4.heading.heading_medium.margin-bottom Пример рекламной кампании
                         .offer Один из последних проектов SOHO
-                    .col-xl-5
+                    .col-xl-5.col-lg-8
                         .project__task.margin-bottom
                             .project__task__item Задача
                             .project__task__content 
-                                p.offer Необходимо было быстро настроить рекламную кампанию в Директе, для скорейшего обеспечения клиента заказами. После этого настроить рекламу в Google. Одно из ключевых требований - только целевая аудитория и ни в коем случае не выходить за рамки бюджета. 
-                    .col-xl-5
+                                p.offer.last Необходимо было быстро настроить рекламную кампанию в Директе, для скорейшего обеспечения клиента заказами. После этого настроить рекламу в Google. Одно из ключевых требований - только целевая аудитория и ни в коем случае не выходить за рамки бюджета. 
+                    .col-xl-5.col-lg-8
                         .project__task.margin-bottom
                             .project__task__item Решение
                             .project__task__content
-                                p.offer Изначально разработали рекомендации по улучшению посадочных страниц, чтобы посетители видели необходимую информацию, проходили большую часть этапов продажи на странице и оставляли заявку. Пока вносились правки на сайте, собрали ключевые слова, разработали УТП, проработали тексты объявлений, настроили счетчики, аналитику  и цели для возможности точной оценки эффективности рекламы.
-                .row.margin-bottom-sm
+                                p.offer.last Изначально разработали рекомендации по улучшению посадочных страниц, чтобы посетители видели необходимую информацию, проходили большую часть этапов продажи на странице и оставляли заявку. Пока вносились правки на сайте, собрали ключевые слова, разработали УТП, проработали тексты объявлений, настроили счетчики, аналитику  и цели для возможности точной оценки эффективности рекламы.
+                .row.margin-bottom-xs
                     .col-xl-8
                         p.heading.heading_small Результаты через 1 месяц
                         p.offer.last Бюджет рекламной кампании был израсходован только на 30%, а все плановые показатели по заявкам 
                             | были выполнены. Оптимизация велась каждый день (тестовое ведение рекламы именно поэтому такое дорогое), 
                             | нам удалось избежать нецелевого трафика и получить заказы по согласованной цене заявки.
-                .row.margin-bottom-sm
+                .row.margin-bottom-xs
                     .col-xl-8
                         p.heading.heading_small Результаты через 2 месяца
                         p.offer.last Сумма расходов увеличилась на 1520 руб. за месяц. И вот каких результатов нам удалось достичь:
                 .row.margin-bottom
-                    .col-xl-2.col-lg-4
+                    .col-xl-2.col-lg-4.col-5.d-flex
                         .item.item_result.item_info
-                            .item__offer увеличили количество переходов на сайт
+                            .item__offer увеличили количество переходов на&nbsp;сайт
                             .item__result на 24%
-                    .col-xl-2.col-lg-4
+                    .col-xl-2.col-lg-4.col-5.d-flex
                         .item.item_result.item_info
                             .item__offer снизили стоимость цены заказа
                             .item__result в 3 раза
-                    .col-xl-2.col-lg-4
-                        .item.item_result.item_info
-                            .item__offer увеличили количество заявок с сайта
+                    .col-xl-2.col-lg-4.col-5.d-flex
+                        .item.item_result.item_info.item_last-md
+                            .item__offer увеличили количество заявок с&nbsp;сайта
                             .item__result в 2,1 раза
-                    .col-xl-2.col-lg-4
-                        .item.item_result.item_info
-                            .item__offer доходность инвестиции в рекламу
+                    .col-xl-2.col-lg-4.col-5.d-flex
+                        .item.item_result.item_info.item_last-md
+                            .item__offer доходность инвестиции в&nbsp;рекламу
                             .item__result 700%
                 .row.align-items-center
-                    .col-xl-4
-                        p.heading.heading_small Результаты через 3 месяца
-                        p.offer Цена клика стала еще меньше в 1,9 раза, а количество заявок увеличилось на 57%
-                        a.btn.btn_primary(href="#") Хочу эффективную рекламу
-                    .col-xl-4
+                    .col-xl-4.col-md-6
+                        p.heading.heading_small Результаты через 3&nbsp;месяца
+                        p.offer Цена клика стала еще меньше в&nbsp;1,9 раза, а&nbsp;количество заявок увеличилось на&nbsp;57%
+                        p.offer 
+                            a.btn.btn_primary(href="#") Хочу эффективную рекламу
+                    .col-xl-4.col-md-4.margin-top-sm
                         img.img-fluid(src="../images/test-03.png")
         .content.content_price
             .container.content_price__container
@@ -160,7 +162,7 @@ html(lang="ru", dir="ltr")
                             span.text-green еще нет рекламы
                         .offer В зависимости от конкурентности тематики сайта, а также поставдленных задач, рассчитывается стоимость предоставляемых услуг. Также вы можете выбрать пакетное предложение, которое поможет достичь поставленных целей без больших затрат.
                 .row.align-items-center.justify-content-center
-                    .col-xl-3.col-lg-5.p-relative
+                    .col-xl-3.col-lg-3.p-relative
                         img.element.element_1(src="../images/comment/ad_comment_0.png")
                         .price
                             .price__header Для сайтов визиток
@@ -175,7 +177,7 @@ html(lang="ru", dir="ltr")
                                     | подключение до 3 целей
                                     | подключение Метрики и Analytics
                             .price__footer стоимость 17к
-                    .col-xl-3.col-lg-5.p-relative
+                    .col-xl-3.col-lg-4.p-relative
                         img.element.element_2(src="../images/comment/ad_comment_2.png")
                         .price.price_large
                             .price__header для небольших каталогов
@@ -190,7 +192,7 @@ html(lang="ru", dir="ltr")
                                     | подключение до 10 целей
                                     | подключение Метрики и Analytics
                             .price__footer стоимость 27к
-                    .col-xl-3.col-lg-5.p-relative
+                    .col-xl-3.col-lg-3.p-relative
                         img.element.element_3(src="../images/comment/ad_comment_1.png")
                         .price
                             .price__header Для интернет-магазинов
@@ -206,12 +208,12 @@ html(lang="ru", dir="ltr")
                                     | подключение Метрики и Analytics
                             .price__footer стоимость 40к
             .container.content_price__container
-                .row.justify-content-center.margin-bottom
+                .row.justify-content-center.margin-bottom.margin-bottom-sm-none
                     .col-xl-7.text-center
                         .heading.heading_small Тарифы для тех, у кого 
                             span.text-green уже есть реклама
                 .row.justify-content-center
-                    .col-xl-4.col-lg-5
+                    .col-xl-4.col-md-5
                         .price-line
                             .price-line__title Ведение рекламной кампании (оптимизация цены клика и бюджета, составление минус слов, мониторинг)
                             .price-line__value от 5к
@@ -224,7 +226,7 @@ html(lang="ru", dir="ltr")
                         .price-line.even
                             .price-line__title Настройка ретаргетинга (показ рекламы тем, кто ушел с сайта без покупки или заказа услуги)
                             .price-line__value от 5к
-                    .col-xl-4.col-lg-5
+                    .col-xl-4.col-md-5
                         .price-line
                             .price-line__title Ведение рекламной кампании (оптимизация цены клика и бюджета, составление минус слов, мониторинг)
                             .price-line__value от 5к
