--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -16,7 +16,7 @@
         color: $white;
         background: linear-gradient( -45deg, rgb(50,43,143) 0%, rgb(63,36,166) 62%, rgb(76,28,188) 100%);
         box-shadow: 0px 3px 6px 0px rgba(50,43,143, 0.2);
-        width: 270px;
+        // width: 270px;
         &:hover{
             color: $white;
             box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.5);
