--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -20,7 +20,7 @@
     &__logo{
         position: absolute;
         top: 0;
-        left: 0;
+        left: 20px;
 
         padding-top: 80px;
         
