--- a/src/css/_list.scss
+++ b/src/css/_list.scss
@@ -1,4 +1,5 @@
 .list{
+    padding-left: 20px;
     margin-bottom: 0;
     
     &__item{
@@ -16,9 +17,9 @@
             padding-left: 50px;
             min-height: 30px;
 
-            & + .list__item{
-                margin-top: 20px;
-            }
+            // & + .list__item{
+            //     margin-top: 20px;
+            // }
 
             display: flex;
             align-items: center;
