--- a/src/dev.pug
+++ b/src/dev.pug
@@ -38,45 +38,45 @@ html(lang="ru", dir="ltr")
                         path(style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90")
             .container
                 .row
-                    .col-xl-5.offset-xl-1.align-items-center
+                    .col-xl-6.col-md-8.col-10.offset-md-2.offset-xl-1
                         h1.heading Верстка и&nbsp;настройка&nbsp;CMS
-                        .offer Дизайн проекта готов и появляется вопрос «что дальше?»
+                        .offer Дизайн проекта готов и&nbsp;появляется вопрос «что&nbsp;дальше?»
         .content.content_background
             .container.p-relative
                 .row
-                    .col-xl-10
+                    .col-xl-10.col-lg-8
                         h2.heading.margin-bottom Верстка по макетам — 
                             span.text-red оживляем дизайн
                     .col-xl-6.offset-xl-1
                         p.offer Разработка ведется с учётом всех современных стандартов и последних тенденций. Это значит - сайт будет полностью адаптирован под все устройства (мобильные телефоны, планшеты, ноутбуки и ПК), корректно работать во всех основных браузерах и настроен именно под ваш проект. 
                     .col-xl-7.offset-xl-1
                         .row.justify-content-between
-                            .col-xl-3
+                            .col-xl-3.col-lg-3.col-sm-5
                                 .item
                                     .item__header html5 + css3
                                     .item__offer соответствие современным стандартам верстки
-                            .col-xl-3
+                            .col-xl-3.col-lg-3.col-5
                                 .item
                                     .item__header BEM
                                     .item__offer стандартизированное именование элементов
-                            .col-xl-3
+                            .col-xl-3.col-lg-3.col-5
                                 .item
                                     .item__header Speed
                                     .item__offer высокая скорость загрузки&nbsp;сайта
-                            .col-xl-3
+                            .col-xl-3.col-lg-3.col-5
                                 .item
                                     .item__header Adaptive
                                     .item__offer адаптация под любой экран&nbsp;устройства
-                            .col-xl-3
+                            .col-xl-3.col-lg-3.col-5
                                 .item
                                     .item__header W3C
                                     .item__offer валидный код: отсутствие ошибок
-                            .col-xl-3
+                            .col-xl-3.col-lg-3.col-sm-5
                                 .item
                                     .item__header cross-browser 
                                     .item__offer корректное отображение в&nbsp;основных браузерах
 
-                    .col-xl-5.offset-xl-5.margin-top
+                    .col-xl-5.offset-xl-5.col-lg-7.offset-lg-3.margin-top
                         h3.heading.heading_small Не боимся готовых решений и&nbsp;умеем&nbsp;придумывать собственные
                         p.offer При разработке мы стараемся максимально оптимизировать процесс вертски. Небольшие скрипты и&nbsp;решающие не&nbsp;типовые задач пишем «с&nbsp;нуля». А&nbsp;для&nbsp;решения стандартный задач используются готовые плагины с&nbsp;активной поддержкой. 
                         p.offer Это обеспечивает открытость кода и удобство работы
@@ -92,11 +92,11 @@ html(lang="ru", dir="ltr")
                     rect(x="97" y="9.5" width="71" height="160") 
             .container.p-relative
                 .row
-                    .col-xl-6
+                    .col-xl-6.col-lg-8
                         .heading.heading_medium
-                            span.text-red Подключение и настройка 
+                            span.text-red Подключение и&nbsp;настройка 
                             | CMS
-                        .subheading Системы управления сайтом (MODX, Wordpress и т.д.)
+                        .subheading Системы управления сайтом (MODX, Wordpress и&nbsp;т.д.)
                         p.offer Результат верстки — это статичные web-страницы, чтобы редактировать их самостоятельно нужно 
                             | иметь&nbsp;базовые знания в&nbsp;HTML-разметке. А CMS обеспечивают удобный пользовательский интерфейс и&nbsp;возможность 
                             | менять тексты, добавлять новые страницы по готовым шаблонам и многое другое без&nbsp;страха что-то сломать.
@@ -108,7 +108,7 @@ html(lang="ru", dir="ltr")
                         .heading.heading_small Комплексная разработка сайта
                         .offer Мы пропагандируем индивидуальный расчет стоимости каждого проекта, но знаем вы хотите видеть хотя бы примерные цены поэтому немного цифр
                 .row.align-items-center.justify-content-center
-                    .col-xl-3.col-lg-5.p-relative
+                    .col-xl-3.col-lg-3.p-relative
                         img.element.element_1(src="../images/comment/dev_comment_0.png")
                         .price
                             .price__header Лендинг
@@ -119,7 +119,7 @@ html(lang="ru", dir="ltr")
                                 p Что-то еще тут написать для баланса
                             .price__time от 7 дней
                             .price__footer стоимость 13к+(за 3-4 экрана)
-                    .col-xl-3.col-lg-5.p-relative
+                    .col-xl-3.col-lg-4.p-relative
                         img.element.element_2(src="../images/comment/dev_comment_2.png")
                         .price.price_large
                             .price__header Сайт-визитка
@@ -131,7 +131,7 @@ html(lang="ru", dir="ltr")
                             .price__time от 10 дней
                             .price__info контент предоставляется заказчиком
                             .price__footer стоимость 45к+
-                    .col-xl-3.col-lg-5.p-relative
+                    .col-xl-3.col-lg-3.p-relative
                         img.element.element_3(src="../images/comment/dev_comment_1.png")
                         .price
                             .price__header Магазин
@@ -143,11 +143,11 @@ html(lang="ru", dir="ltr")
                             .price__time от 20 дней
                             .price__footer стоимость 66к+
             .container.content_price__container
-                .row.margin-bottom
+                .row.margin-bottom.margin-bottom.margin-bottom-sm-none
                     .col-xl-6.offset-xl-2.text-center
-                        .heading.heading_small Обслуживание и поддержка сайта
+                        .heading.heading_small Обслуживание и&nbsp;поддержка&nbsp;сайта
                 .row.justify-content-center
-                    .col-xl-4.col-lg-5
+                    .col-xl-4.col-md-5
                         .price-line
                             .price-line__title Ведение рекламной кампании (оптимизация цены клика и бюджета, составление минус слов, мониторинг)
                             .price-line__value от 5к
@@ -160,7 +160,7 @@ html(lang="ru", dir="ltr")
                         .price-line.even
                             .price-line__title Настройка ретаргетинга (показ рекламы тем, кто ушел с сайта без покупки или заказа услуги)
                             .price-line__value от 5к
-                    .col-xl-4.col-lg-5
+                    .col-xl-4.col-md-5
                         .price-line
                             .price-line__title Ведение рекламной кампании (оптимизация цены клика и бюджета, составление минус слов, мониторинг)
                             .price-line__value от 5к
