--- a/src/ad.pug
+++ b/src/ad.pug
@@ -38,7 +38,7 @@ html(lang="ru", dir="ltr")
                         path(style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90")
             .container
                 .row
-                    .col-xl-6.col-md-8.col-10.offset-md-2.offset-xl-1.align-items-center
+                    .col-xl-6.col-md-8.col-10.offset-md-2.offset-xl-1
                         h1.heading Качественная реклама для&nbsp;любого бизнеса
                         .offer.last Быстро. Точно. Эффективно. Новые возможности для&nbsp;вашего бизнеса с&nbsp;рекламой от&nbsp;SOHO.
         .content.p-relative.content_element
