--- a/src/css/media.scss
+++ b/src/css/media.scss
@@ -62,6 +62,15 @@
             }
         }
     }
+    .dev{
+        .content{
+            &_price{
+                .element{
+                    display: none;
+                }
+            }
+        }
+    }
 }
 @media(max-width: 992px){
     .d-flex-md{display: flex;}
@@ -128,21 +137,58 @@
                     display: block;
                 }
                 .element_1 {
+                    width: 210px;
                     top: -10px;
-                    left: -40px;
+                    left: 0;
                 }
                 .element_2{
+                    width: 190px;
                     bottom: -30px;
-                    right: -30px;
+                    right: 0;
                 }
                 .element_3 {
+                    width: 180px;
                     top: 130px;
-                    right: -30px;
+                    right: 0;
                 }
             }
             &_element{
                 .element{
                     display: none;
+                }
+            }
+        }
+    }
+    .dev{
+        .content{
+            &_title{
+                .offer {
+                    margin-bottom: 40px;
+                }
+            }
+            &_element{
+                .element{
+                    display: none;
+                }
+            }
+            &_price{
+                .element{
+                    display: block;
+                }
+                .element_1 {
+                    width: 210px;
+                    top: -10px;
+                    left: 0;
+                }
+                .element_2{
+                    width: 190px;
+                    bottom: -50px;
+                    right: 0;
+                }
+                .element_3 {
+                    width: 180px;
+                    top: 130px;
+                    right: 0;
                 }
             }
         }
@@ -187,6 +233,10 @@
             font-size: 36px;
             line-height: 44px;
             margin-bottom: 40px;
+            &_small{
+                font-size: 32px;
+                line-height: 40px;
+            }
             & + .offer{
                 margin-top: 40px;
             }
@@ -232,13 +282,19 @@
             }
         }
     }
-
     .ad{
         .content{
             &_title{
                 &__elements {
                     bottom: -100px;
                 }
+            }
+        }
+    }
+    .dev{
+        .item{
+            &__header{
+                font-size: 28px;
             }
         }
     }
@@ -281,6 +337,10 @@
         .heading {
             font-size: 28px;
             line-height: 34px;
+            &_small{
+                font-size: 22px;
+                line-height: 30px;
+            }
         }
         &__btn{
             &__link{
